# medInria-public

./: .gitignore  .gitmodules  .merge_file_vjWm8V  .project  ABOUT.txt  AUTHORS  CMakeIncludeDirectories.cmake  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  CodeCopyright.txt  DESCRIPTION.txt  LICENSE.txt  LICENSES_EXT.txt  LICENSE_MUSICardio.txt  README  README.md  README.txt  RELEASE_NOTES.txt  ScriptGenerateMedInriaFancyDMG.scpt.in  UsevtkINRIA3D.cmake.in  doxygen.conf  installerMedInria.nsi  installerMedinria.nsi  installerMedular.nsi  mac_packager.sh.in  medCompareViewContainer.h  medCustomViewContainer.cpp  medFilteringViewContainer.cpp  medMultiViewContainer.cpp  medMultiViewContainer.h  medSingleViewContainer.cpp  medSingleViewContainer.h  medViewContainer.cpp  medViewContainer.h  settings.json  vtkGenerateINRIA3DConfig.cmake  vtkINRIA3DConfig.cmake.in  vtkINRIA3DConfigure.h.in  vtkINRIA3DIncludeDirectories.cmake
HWShading/: CMakeLists.txt  ShaderText.cmake  vtkAnisotropicLightingSP.cxx  vtkBMIAShaderProgram.cxx  vtkFiberMapper.cxx  vtkFiberMapper.h  vtkShaderObjectCollection.h  vtkUniformBool.cxx  vtkUniformBool.h  vtkUniformVec2.h  vtkUniformVec3.cxx  vtkUniformVec3.h
KWAddOn/: CMakeLists.txt  INRIAviz4D.cxx  kwcommon.h  vtkKWCameraAnimationWidget.cxx  vtkKWCameraAnimationWidget.h  vtkKWDICOMExporter.cxx  vtkKWDICOMImporter2.cxx  vtkKWDICOMImporter2.h  vtkKWDataManagerWidget.cxx  vtkKWDataManagerWidget.h  vtkKWDataSelectorWidget.cxx  vtkKWDataSelectorWidget.h  vtkKWDicomInfoWidget.cxx  vtkKWDicomInfoWidget.h  vtkKWHelloWorldToolBox.cxx  vtkKWHelloWorldToolBox.h  vtkKWImage3DImagePlaneCallback.cxx  vtkKWInfoToolBox.cxx  vtkKWInfoToolBox.h  vtkKWLandmarkManagerWidget.cxx  vtkKWLandmarkManagerWidget.h  vtkKWMainCallback.cxx  vtkKWMainCallback.h  vtkKWMainWindow.cxx  vtkKWMainWindow.h  vtkKWMainWindowInteractor.cxx  vtkKWMainWindowInteractor.h  vtkKWMetaDataSetControlWidget.cxx  vtkKWMetaDataSetControlWidget.h  vtkKWMetaInfoWidget.cxx  vtkKWMetaInfoWidget.h  vtkKWPageView.cxx  vtkKWPageView.h  vtkKWPreviewPage.cxx  vtkKWPreviewPage.h  vtkKWSequenceEditorWidget.cxx  vtkKWSequenceEditorWidget.h  vtkKWSequenceImporter.cxx  vtkKWSequenceImporter.h  vtkKWSequencer.cxx  (+17 more)
SphericalHarmonicsVisu/: CMakeLists.txt  itkSphericalHarmonicITKToVTKFilter.h  vtkSphereTesselator.cpp  vtkSphereTesselator.hpp  vtkSphericalHarmonicGlyph.cpp  vtkSphericalHarmonicGlyph.h  vtkSphericalHarmonicSource.cpp  vtkSphericalHarmonicSource.h
Testing/: CMakeLists.txt
app/: CMakeLists.txt  medPluginWidget.cpp  medPluginWidget.h
dcmtkNetConnector/: CMakeLists.txt  CmakeLists.txt  FindDCMTK2.cmake  ServerThread.cpp  ServerThread.h  SimpleView.cpp  SimpleView.h  SimpleView.ui  files.cmake  main.cpp  medDatabasePacs.cpp  medDatabasePacs.h  medDatabasePacsPlugin.cpp  medDatabasePacsPlugin.h  medDatabasePacsPluginExport.h
doc/: CMakeLists.txt  Doxyfile.in  Doxyfile.txt.in  DoxygenFooter.html  DoxygenFooter.html.in  DoxygenHeader.html  DoxygenLayout.xml  generate_doc.cmake.in  index.html
dtkItkLogForwarder/: CMakeLists.txt  itkLogForwarder.cpp  itkLogForwarder.h
dtkVtkLogForwarder/: CMakeLists.txt  vtkLogForwarder.cpp  vtkLogForwarder.h
itkAddOn/: CMakeLists.txt  GDCMImport.cxx  itkAffineRegistrationMethod.txx  itkDicomDictionary.h  itkDicomTagManager.h  itkExtractImageBufferFilter.h  itkExtractImageBufferFilter.txx  itkGDCMImporter.cxx  itkGDCMImporter.h  itkGDCMImporter2.txx  itkGDCMImporter3.h  itkGDCMImporter3.txx  itkImageSeriesReshapeFilter.h  itkMultiThreadedImageIOBase.cxx  itkRegistrationFactory.h  itkRegistrationFactory.txx  itkReshaper.cxx  itkTransformToDeformationFieldFilter.h  itkTransformToDeformationFieldFilter.txx  itkVectorLinearInterpolateNearestNeighborExtrapolateImageFunction.h  itkVectorLinearInterpolateNearestNeighborExtrapolateImageFunction.txx
medItk/: CMakeLists.txt  itkDCMTKImageIO.cxx  itkDCMTKImageIO.h  itkDcmtkReaderTest.cxx  itkImageToVTKImageFilter.h  itkImageToVTKImageFilter.txx  itkMultiThreadedImageIOBase.h  itkVTKImageToImageFilter.h  itkVTKImageToImageFilter.txx  medItk.cpp  medItk.h
packaging/: CMakeLists.txt  Description.txt  Packaging.cmake  Readme.txt  Welcome.txt  medInria-devel.spec.in  medInria.spec.in
src/: CMakeLists.txt
src-plugins/: CMakeLists.txt  README
superbuild/: CMakeLists.txt  ConfigureExternalProjects.cmake
tests/: CMakeLists.txt
vtkDataManagement/: CMakeLists.txt  vtkDataManager.cxx  vtkDataManager.h  vtkDataManagerReader.cxx  vtkDataManagerWriter.cxx  vtkDataManagerWriter.h  vtkDiffXMLWriter.cxx  vtkDiffXMLWriter.h  vtkFiberDataSet.cxx  vtkFiberDataSet.h  vtkMetaDataSet.cxx  vtkMetaDataSet.h  vtkMetaDataSetSequence.cxx  vtkMetaDataSetSequence.h  vtkMetaImageData.cxx  vtkMetaImageData.h  vtkMetaSurfaceMesh.h  vtkXMLFiberDataSetReader.cxx
vtkDataMesh/: CMakeLists.txt  vtkDataMesh.cpp  vtkDataMesh.h  vtkDataMesh4D.cpp  vtkDataMesh4D.cxx  vtkDataMesh4D.h  vtkDataMeshPlugin.cpp  vtkDataMeshPlugin.h  vtkDataMeshPluginExport.h
vtkDataMeshWriter/: CMakeLists.txt  vtkDataMesh4DWriter.cpp  vtkDataMesh4DWriter.h  vtkDataMeshWriter.cpp  vtkDataMeshWriter.h  vtkDataMeshWriterPlugin.cpp  vtkDataMeshWriterPlugin.h  vtkDataMeshWriterPluginExport.h
vtkImageView/: CMakeLists.txt  vtkAxes2DWidget.cxx  vtkAxes2DWidget.h  vtkDataSet2DWidget.cxx  vtkDataSet2DWidget.h  vtkImageView.cxx  vtkImageView.h  vtkImageView2D.cxx  vtkImageView2D.h  vtkImageView2DCommand.cxx  vtkImageView2DCommand.h  vtkImageView3D.cxx  vtkImageView3D.h  vtkImageViewCollection.cxx  vtkImageViewCollection.h  vtkImageViewCornerAnnotation.h  vtkImageViewTest.cxx  vtkInteractorStyleImageView2D.cxx  vtkInteractorStyleImageView2D.h  vtkSmartVolumeMapper.cxx
vtkRenderingAddOn/: CMakeLists.txt  vtkDataSet3DCroppingPlaneCallback.h  vtkFillImageWithPolyData.cxx  vtkImage3DImagePlaneCallback.cxx  vtkImage3DImagePlaneCallback.h  vtkImageOrientedPointWidgetCallback.cxx  vtkImageTracerWidgetCallback.h  vtkInteractorStyleImage2D.cxx  vtkInteractorStyleImage2D.h  vtkSynchronizedView.cxx  vtkSynchronizedView.h  vtkViewImage.cxx  vtkViewImage.h  vtkViewImage2D.cxx  vtkViewImage2D.h  (+4 more)
(+9268 files in other folders)
